# proj3-kolko-i-krzyzyk

./: CMakeLists.txt  proj3.cpp
output/: proj3
